troquei um id de uma section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </main>
         </div>
         <div class="container">
-            <section id="produtos">
+            <section class="container_produtos">
                 <h2>Produtos</h2>
                 <hr>
                 <div class="produto container">
@@ -211,7 +211,7 @@
             </section>
         </div>
         <div class="container">
-            <section id="produtos">
+            <section class="container_produtos">
                 <div class="produto container">
                     <figure id="placa_de_video">
                             <img src="imagens/Placa de videos/placa-de-video-asus-tuf-gaming-nvidia-geforce-gtx-1660-super-6gb-gddr6-192bit_114708.jpg" alt="imagem da asus tuf gaming">
